documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32.H

typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long HVL;
typedef unsigned long * LPHVL;
typedef unsigned long HPORT;
typedef unsigned long * LPHPORT;
typedef unsigned long HSCHED;
typedef unsigned long * LPHSCHED;
typedef unsigned long HSCHEDITEM;
typedef unsigned long * LPHSCHEDITEM;
typedef int BOOL;
typedef int * LPBOOL;
typedef int HCARD;
typedef int ERRVAL;

/**************************
*
*   Constants
*
**************************/

enum {	MAX_AFDXPAYLOAD    = 1471,                //Max Payload Size defined for valid AFDX Frames - not including RSN byte
		MIN_AFDXPAYLOAD    = 17,                  //Min Payload Size defined for valid AFDX Frames - not including RSN byte
		MAX_UDPPAYLOAD     = 1472,                //Max Payload Size defined for valid UDP Frames - includes RSN byte
		MIN_UDPPAYLOAD     = 18,                  //Min Payload Size defined for valid UDP Frames - includes RSN byte
		MAX_AFDXPACKETSIZE = 1514,                //Max size of VALID AFDX transmit/receive packets (in bytes)
		MIN_PACKETBUFSIZE  = 60,                  //Min size of buffer used to transmit packets (in bytes)
		MAX_SEQRDBUFSIZE   = 0xFD000,             //Max buffer size for SeqRd functions

		HEADERLEN_MAC = 14,                                         //MAC header length = Destination(6bytes)+Source(6)+Type(2)
		HEADERLEN_IP  = 20,                                         //IP header length  
		HEADERLEN_UDP = 8,                                          //UDP header length = SourcePort(2bytes)+DestPort(2)+Len(2)+CRC(2)
		HEADERLEN_ALL = (HEADERLEN_MAC+HEADERLEN_IP+HEADERLEN_UDP), //Length of all headers (14+20+8=42) for IPV4 UDP packets

		DESCOFFSET_PKT = 32,                      //Offset of packet in AFDX packet descriptor
		DESCOFFSET_HDR = 32,                      //Offset of header in AFDX packet descriptor header

		MACLOCALMULTICAST_MASK = 0x03000000       //Group and the locally administered bits (upper 32-byte mask - constant portion)
};
typedef struct
{
    USHORT type;               
    USHORT count;              
    ULONG  timestamp;         
    ULONG  timestamph;        
    ULONG  delay;          
    ULONG  delayh;         
    ULONG  activity;
    ULONG  errors;
    USHORT busnum;
    USHORT totalpktlen;     //Total packet length
    BYTE   packet[MAX_AFDXPACKETSIZE+64];
} AFDXPKTDESC;
typedef AFDXPKTDESC * LPAFDXPKTDESC;
    typedef struct
    {
        BYTE data[6];
    } ADDRESS;

AX1W32API ERRVAL __stdcall AX1_RPC_NetGetConfig(LPULONG pconfigval,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_NetGetVLCount(USHORT netid,LPUSHORT pvlcount,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_NetSetConfig(ULONG configval,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_NetSetInterfaceID(USHORT netid,USHORT idVal,USHORT flags,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ParamFrameFreq(ULONG configval,USHORT percent,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ParamGetFrameFreq(LPULONG pconfigval,LPUSHORT ppercent,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortConfig(ULONG configval,HVL hvl,USHORT dstid,USHORT srcid,USHORT depth,USHORT reprate,LPHPORT portptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortDataRd(HPORT hport,LPBYTE data,LPUSHORT lengthptr,LPBYTE rsnptr,LPULONG timetaghptr,LPULONG timetagptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortDataWr(HPORT hport,LPBYTE data,USHORT length,BYTE rsn,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortGetAny(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortGetConfig(LPULONG pconfigval,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortGetHandle(HVL hvl,USHORT portnum,LPHPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortGetInfo(HPORT hport,LPULONG configval,LPUSHORT vlid,LPUSHORT dstport,LPUSHORT srcport,LPUSHORT depth,LPUSHORT reprate,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortGetNext(HVL hvl,LPUSHORT nextPort,USHORT lastPort,USHORT flag,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortGetQueueCount(HPORT hport,LPUSHORT queuecount,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortInfoRd(LPULONG timetaghptr,LPULONG timetagptr,LPULONG activityptr,LPULONG errorptr,LPBYTE rsnptr,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortRawRd(HPORT hport,LPBYTE packet,LPUSHORT lengthptr,LPULONG timetaghptr,LPULONG timetagptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortRawWr(HPORT hport,LPBYTE packet,USHORT length,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortRd(HPORT hport,LPAFDXPKTDESC pktdesc,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortSetConfig(ULONG configval,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortSkipConfig(HPORT hport,ULONG ctrlflags,USHORT trigid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_PortStepConfig(HPORT hport,ULONG ctrlflags,USHORT trigid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_RcvHostEnable(BOOL enableval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_RcvHostGetEnable(LPBOOL penableval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_RedundConfig(ULONG configval,USHORT pairid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_RobinAddPort(HSCHED hrobin,HPORT hport,BOOL bSkip,BOOL bShot,BOOL bTxA,BOOL bTxB,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedAddNoop(USHORT netid,BOOL bSkip,BOOL bShot,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedAddPort(USHORT netid,HPORT hport,BOOL bSkip,BOOL bShot,BOOL bTxA,BOOL bTxB,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedAddRobin(USHORT netid,HSCHED hsub,BOOL bSkip,BOOL bShot,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedAddSub(USHORT netid,HSCHED hsub,BOOL bSkip,BOOL bShot,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedClear(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedCrtRobin(LPHSCHED hrobin,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedCrtSub(LPHSCHED hsub,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedFrameEnd(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedFrameStart(USHORT netid,ULONG usframetime,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SchedItemUpdate(HSCHEDITEM hscheditem,BOOL bSkip,BOOL bShot,BOOL bTxA,BOOL bTxB,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SdrRdL(LPULONG data,ULONG addr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SdrWrL(ULONG data,ULONG addr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqClear(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqConfig(ULONG configval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqGetConfig(LPULONG pconfigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqRd(LPBYTE buf,LPULONG bufcount,LPINT reccount,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqSetConfig(ULONG configval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqSetMonitor(USHORT netid,USHORT vlid,BOOL bmonitor,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqStatus(LPUSHORT statusptr,LPULONG headptr,LPULONG tailptr,LPULONG configptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SubAddNoop(HSCHED hsub,BOOL bSkip,BOOL bShot,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SubAddPort(HSCHED hsub,HPORT hport,BOOL bSkip,BOOL bShot,BOOL bTxA,BOOL bTxB,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SubAddRobin(HSCHED hsub,HSCHED hrobin,BOOL bSkip,BOOL bShot,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_Test1(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_Test2(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_Test3(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_Test4(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigClearBits(ULONG bits,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigGetVal(LPULONG trigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigSetBits(ULONG bits,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigSetVal(ULONG trigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigSinkConfig(USHORT trigid,ULONG ctrlflags,ULONG ulComp,ULONG ulMask,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLConfig(ULONG configval,USHORT netid,USHORT vlid,ADDRESS macsrc,ULONG ipdst,ULONG ipsrc,ULONG bag,ULONG skewmax,LPHVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLConfigMAC(ULONG configval,USHORT netid,ADDRESS macdst,ADDRESS macsrc,ULONG ipdst,ULONG ipsrc,ULONG bag,ULONG skewmax,LPHVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetConfig(LPULONG pconfigval,HVL hvl,HCARD handleval);