documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32VB.BAS

Public Declare Function AX1_RPC_NetGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_NetGetConfig@12" (ByRef pconfigval As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_NetGetVLCount Lib "AX1W32.DLL" Alias "_AX1_RPC_NetGetVLCount@12" (ByVal netid As Integer, ByRef pvlcount As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_NetSetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_NetSetConfig@12" (ByVal configval As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_NetSetInterfaceID Lib "AX1W32.DLL" Alias "_AX1_RPC_NetSetInterfaceID@16" (ByVal netid As Integer, ByVal idVal As Integer, ByVal flags As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ParamFrameFreq Lib "AX1W32.DLL" Alias "_AX1_RPC_ParamFrameFreq@16" (ByVal configval As Long, ByVal percent As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ParamGetFrameFreq Lib "AX1W32.DLL" Alias "_AX1_RPC_ParamGetFrameFreq@16" (ByRef pconfigval As Long, ByRef ppercent As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortConfig@32" (ByVal configval As Long, ByVal hvl As Long, ByVal dstid As Integer, ByVal srcid As Integer, ByVal depth As Integer, ByVal reprate As Integer, ByRef portptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortDataRd Lib "AX1W32.DLL" Alias "_AX1_RPC_PortDataRd@28" (ByVal hport As Long, ByRef data As Byte, ByRef lengthptr As Integer, ByRef rsnptr As Byte, ByRef timetaghptr As Long, ByRef timetagptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortDataWr Lib "AX1W32.DLL" Alias "_AX1_RPC_PortDataWr@20" (ByVal hport As Long, ByRef data As Byte, ByVal length As Integer, ByVal rsn As Byte, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortGetAny Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetAny@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetConfig@12" (ByRef pconfigval As Long, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortGetHandle Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetHandle@16" (ByVal hvl As Long, ByVal portnum As Integer, ByRef hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortGetInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetInfo@32" (ByVal hport As Long, ByRef configval As Long, ByRef vlid As Integer, ByRef dstport As Integer, ByRef srcport As Integer, ByRef depth As Integer, ByRef reprate As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortGetNext Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetNext@20" (ByVal hvl As Long, ByRef nextPort As Integer, ByVal lastPort As Integer, ByVal flag As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortGetQueueCount Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetQueueCount@12" (ByVal hport As Long, ByRef queuecount As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortInfoRd Lib "AX1W32.DLL" Alias "_AX1_RPC_PortInfoRd@28" (ByRef timetaghptr As Long, ByRef timetagptr As Long, ByRef activityptr As Long, ByRef errorptr As Long, ByRef rsnptr As Byte, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortRawRd Lib "AX1W32.DLL" Alias "_AX1_RPC_PortRawRd@24" (ByVal hport As Long, ByRef packet As Byte, ByRef lengthptr As Integer, ByRef timetaghptr As Long, ByRef timetagptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortRawWr Lib "AX1W32.DLL" Alias "_AX1_RPC_PortRawWr@16" (ByVal hport As Long, ByRef packet As Byte, ByVal length As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortRd Lib "AX1W32.DLL" Alias "_AX1_RPC_PortRd@12" (ByVal hport As Long, ByRef pktdesc As AFDXPKTDESC, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortSetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortSetConfig@12" (ByVal configval As Long, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortSkipConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortSkipConfig@16" (ByVal hport As Long, ByVal ctrlflags As Long, ByVal trigid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_PortStepConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortStepConfig@16" (ByVal hport As Long, ByVal ctrlflags As Long, ByVal trigid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_RcvHostEnable Lib "AX1W32.DLL" Alias "_AX1_RPC_RcvHostEnable@8" (ByVal enableval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_RcvHostGetEnable Lib "AX1W32.DLL" Alias "_AX1_RPC_RcvHostGetEnable@8" (ByRef penableval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_RedundConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_RedundConfig@12" (ByVal configval As Long, ByVal pairid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_RobinAddPort Lib "AX1W32.DLL" Alias "_AX1_RPC_RobinAddPort@32" (ByVal hrobin As Long, ByVal hport As Long, ByVal bSkip As Long, ByVal bShot As Long, ByVal bTxA As Long, ByVal bTxB As Long, ByRef hscheditem As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedAddNoop Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedAddNoop@20" (ByVal netid As Integer, ByVal bSkip As Long, ByVal bShot As Long, ByRef hscheditem As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedAddPort Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedAddPort@32" (ByVal netid As Integer, ByVal hport As Long, ByVal bSkip As Long, ByVal bShot As Long, ByVal bTxA As Long, ByVal bTxB As Long, ByRef hscheditem As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedAddRobin Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedAddRobin@24" (ByVal netid As Integer, ByVal hsub As Long, ByVal bSkip As Long, ByVal bShot As Long, ByRef hscheditem As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedAddSub Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedAddSub@24" (ByVal netid As Integer, ByVal hsub As Long, ByVal bSkip As Long, ByVal bShot As Long, ByRef hscheditem As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedClear Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedClear@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedCrtRobin Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedCrtRobin@8" (ByRef hrobin As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedCrtSub Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedCrtSub@8" (ByRef hsub As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedFrameEnd Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedFrameEnd@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedFrameStart Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedFrameStart@12" (ByVal netid As Integer, ByVal usframetime As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SchedItemUpdate Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedItemUpdate@24" (ByVal hscheditem As Long, ByVal bSkip As Long, ByVal bShot As Long, ByVal bTxA As Long, ByVal bTxB As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SdrRdL Lib "AX1W32.DLL" Alias "_AX1_RPC_SdrRdL@12" (ByRef data As Long, ByVal addr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SdrWrL Lib "AX1W32.DLL" Alias "_AX1_RPC_SdrWrL@12" (ByVal data As Long, ByVal addr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SeqClear Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqClear@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SeqConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SeqGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqGetConfig@8" (ByRef pconfigval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SeqRd Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqRd@16" (ByRef buf As Byte, ByRef bufcount As Long, ByRef reccount As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SeqSetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqSetConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SeqSetMonitor Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqSetMonitor@16" (ByVal netid As Integer, ByVal vlid As Integer, ByVal bmonitor As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SeqStatus Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqStatus@20" (ByRef statusptr As Integer, ByRef headptr As Long, ByRef tailptr As Long, ByRef configptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SubAddNoop Lib "AX1W32.DLL" Alias "_AX1_RPC_SubAddNoop@20" (ByVal hsub As Long, ByVal bSkip As Long, ByVal bShot As Long, ByRef hscheditem As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SubAddPort Lib "AX1W32.DLL" Alias "_AX1_RPC_SubAddPort@32" (ByVal hsub As Long, ByVal hport As Long, ByVal bSkip As Long, ByVal bShot As Long, ByVal bTxA As Long, ByVal bTxB As Long, ByRef hscheditem As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_SubAddRobin Lib "AX1W32.DLL" Alias "_AX1_RPC_SubAddRobin@24" (ByVal hsub As Long, ByVal hrobin As Long, ByVal bSkip As Long, ByVal bShot As Long, ByRef hscheditem As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_Test1 Lib "AX1W32.DLL" Alias "_AX1_RPC_Test1@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_Test2 Lib "AX1W32.DLL" Alias "_AX1_RPC_Test2@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_Test3 Lib "AX1W32.DLL" Alias "_AX1_RPC_Test3@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_Test4 Lib "AX1W32.DLL" Alias "_AX1_RPC_Test4@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_TrigClearBits Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigClearBits@8" (ByVal bits As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_TrigGetVal Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigGetVal@8" (ByRef trigval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_TrigSetBits Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigSetBits@8" (ByVal bits As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_TrigSetVal Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigSetVal@8" (ByVal trigval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_TrigSinkConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigSinkConfig@20" (ByVal trigid As Integer, ByVal ctrlflags As Long, ByVal ulComp As Long, ByVal ulMask As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_VLConfig@44" (ByVal configval As Long, ByVal netid As Integer, ByVal vlid As Integer, ByVal macsrc As ADDRESS, ByVal ipdst As Long, ByVal ipsrc As Long, ByVal bag As Long, ByVal skewmax As Long, ByRef hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLConfigMAC Lib "AX1W32.DLL" Alias "_AX1_RPC_VLConfigMAC@48" (ByVal configval As Long, ByVal netid As Integer, ByVal macdst As ADDRESS, ByVal macsrc As ADDRESS, ByVal ipdst As Long, ByVal ipsrc As Long, ByVal bag As Long, ByVal skewmax As Long, ByRef hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetConfig@12" (ByRef pconfigval As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
